--- a/htovis.css
+++ b/htovis.css
@@ -60,8 +60,13 @@ p:first-letter{
 li{
   margin: 3px 0px;
   font-style: italic;
+  list-style-image: url(bogyo.png);
 }
 
 .blokktores{
   clear: both;
+}
+
+#bevezeto{
+  border-width: 600px;
 }
